objects/SBQQ__ProductOption__c.object
<CustomObject>
    <customHelpPage>SBQQ__ProductOptionHelp</customHelpPage>
    <description>Option for a configurable product.</description>
    <fields>
        <fullName>SBQQ__AppliedImmediately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates changes to this option should apply immediately.</description>
        <inlineHelpText>Check to immediately apply changes to this option. Use sparingly to avoid slow user experience.</inlineHelpText>
        <label>Apply Immediately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that related product is bundled with the main product. Bundled options have fixed quantity and zero price.</description>
        <inlineHelpText>Indicates that related product is bundled with the main product. Bundled options have fixed quantity and zero price as price is included in the main product.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentCodePosition__c</fullName>
        <description>Position of this component in generated product code for the configuration.</description>
        <inlineHelpText>Position of this component in generated product code for the configuration.</inlineHelpText>
        <label>Component Code Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentCode__c</fullName>
        <description>Code for the component represented by this option.</description>
        <inlineHelpText>Code for the component represented by this option.</inlineHelpText>
        <label>Component Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SKU being configured with this option.</description>
        <inlineHelpText>Product SKU being configured with this option.</inlineHelpText>
        <label>Configured SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountAmount__c</fullName>
        <label>Discount (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule to be applied to the product selected by this option.</description>
        <inlineHelpText>Discount schedule to be applied to the product selected by this option. This overrides discount schedule selected on the product or feature.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <label>Discount (%)</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that quote lines generated from this component should pick up additional discount from the parent package line. Only percentage based discount can be inherited.</description>
        <inlineHelpText>Check to automatically apply additional discount from parent package to this component. Only percentage-based discount can be applied.</inlineHelpText>
        <label>Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExistingQuantity__c</fullName>
        <description>Existing quantity of this product. Computed by looking at the assets attached to the account.</description>
        <inlineHelpText>Existing quantity of this product. Computed by looking at the assets attached to the account.</inlineHelpText>
        <label>Existing Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feature that selects this option.</description>
        <inlineHelpText>Feature that includes this option for selection.</inlineHelpText>
        <label>Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__ConfiguredSKU__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductFeature__c.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductFeature__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__MaxQuantity__c</fullName>
        <description>Maximum quantity allowed for this option.</description>
        <inlineHelpText>Maximum quantity allowed for this option.</inlineHelpText>
        <label>Max Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__MinQuantity__c</fullName>
        <description>Minimum quantity allowed for this option.</description>
        <inlineHelpText>Minimum quantity allowed for this option.</inlineHelpText>
        <label>Min Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Sequential number that determines this option&apos;s sort order.</description>
        <inlineHelpText>Display order of this option within the feature it&apos;s assigned to.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionalSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SKU added if this option is selected.</description>
        <inlineHelpText>Product SKU added when this option is selected.</inlineHelpText>
        <label>Optional SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Optional For</relationshipLabel>
        <relationshipName>OptionalFor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceEditable__c</fullName>
        <description>Brings over the value of Price Editable field on the optional SKU in order to avoid loading optional product just to know if the price is editable.</description>
        <formula>IF(SBQQ__OptionalSKU__r.SBQQ__PriceEditable__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <inlineHelpText>Brings over the value of Price Editable field on the optional SKU in order to avoid loading optional product just to know if the price is editable.</inlineHelpText>
        <label>Price Editable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductCode__c</fullName>
        <formula>SBQQ__OptionalSKU__r.ProductCode</formula>
        <inlineHelpText>Product Code for the optional product SKU.</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductConfigurationType__c</fullName>
        <description>Pulls in the value of Configuration Type on Product object in order to avoid loading related product record.</description>
        <formula>TEXT(SBQQ__OptionalSKU__r.SBQQ__ConfigurationType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the value of Configuration Type on Product object in order to avoid loading related product record.</inlineHelpText>
        <label>Product Configuration Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductDescription__c</fullName>
        <formula>SBQQ__OptionalSKU__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Description for the optional SKU.</inlineHelpText>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductName__c</fullName>
        <formula>SBQQ__OptionalSKU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name for the optional SKU.</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductQuantityScale__c</fullName>
        <description>Specifies the number of decimal places used in the Quantity field.</description>
        <formula>SBQQ__OptionalSKU__r.SBQQ__QuantityScale__c</formula>
        <inlineHelpText>Specifies the number of decimal places used in the Quantity field.</inlineHelpText>
        <label>Product Quantity Scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuantityEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether option quantity is editable regardless of Quantity being specified.</description>
        <inlineHelpText>Check to allow quantity to be edited even though it&apos;s specified on the option.</inlineHelpText>
        <label>Quantity Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quantity__c</fullName>
        <description>Quantity of the related product that should be added to the quote.</description>
        <inlineHelpText>Quantity of the related product that should be added to the quote.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLineVisibility__c</fullName>
        <description>Determines when quote line generated by this option is visible.</description>
        <inlineHelpText>Configure visibility of quote line generated by this option.</inlineHelpText>
        <label>Quote Line Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Editor Only</fullName>
                </value>
                <value>
                    <fullName>Document Only</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this component is required or not.</description>
        <inlineHelpText>Select if this product is required on the bundle.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this option should be selected by default.</description>
        <inlineHelpText>Select if this product option should be automatically selected by default.</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionScope__c</fullName>
        <description>Specifies subscription scope for dynamic subscriptions added as components. Overrides Subscription Scope defaulted from the product.</description>
        <inlineHelpText>Choose how this dynamic subscription determines target product set. Package is just the parent product. Components are the sibling components. Both is parents and sibling components.</inlineHelpText>
        <label>Subscription Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this option as managed by the system which means users can not manually select or deselect.</description>
        <inlineHelpText>Check to indicate this option is managed by the system which makes it unavailable for user selection.</inlineHelpText>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of this option.</description>
        <inlineHelpText>Use &quot;Component&quot; if this option, including quantity, is dependent on parent. Use&quot; Accessory&quot; if this option is dependent on parent but quantity is independent. Use &quot;Related Product&quot; for related but fully independent products.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                    <default>true</default>
                    <label>Component</label>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Related Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__UnitPrice__c</fullName>
        <description>Unit price for this option. This will override the value from price book.</description>
        <inlineHelpText>Unit price for this option. This will override the value from price book.</inlineHelpText>
        <label>Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpliftedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to automatically apply uplift from parent package to this component. Only applies to components that are multi-segmented products.</description>
        <inlineHelpText>Check to automatically apply uplift from parent package to this component. Only applies to components that are multi-segmented products.</inlineHelpText>
        <label>Uplifted By Package</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Option</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>